--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import"https://fonts.googleapis.com/css2?family=Noto+Sans+Linear+B&family=Noto+Sans+Thai&family=Sriracha&display=swap";
+
+
+.gg-font {
+    font-family: 'Noto Sans Thai', sans-serif;
+}
